# turbo-search

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.10x/decisions/: buoy-product-and-repository-identity.md  buoy-product-identity-and-compatibility-v0-3.md  direct-commands-execute-by-default.md  duckdb-only-applied-state-hard-cutover.md  label-driven-tag-derived-automatic-releases.md  local-document-ingestion-uses-markitdown.md  local-pdf-ingestion-uses-markitdown.md  namespace-ranking-defaults.md  one-time-v0-4-squash-topology-bridge.md  plan-artifact-immediate-lifecycle-retention.md  production-routing-default-local-catalog.md  production-routing-local-catalog.md  production-routing-remote-catalog.md  protected-development-and-github-release-governance-v2.md  protected-development-and-github-release-governance.md  simple-main-release-governance.md  website-ranking-defaults.md
.10x/evidence/: 2026-06-28-config-autoresearch-runner-validation.md  2026-06-28-cross-corpus-live-apply.md  2026-06-28-cross-corpus-live-retrieval-evals.md  2026-06-28-cross-corpus-seed-eval-datasets.md  2026-06-28-cross-corpus-validation-local-plans.md  2026-06-28-cross-repo-click-validation.md  2026-06-28-cross-repo-requests-validation.md  2026-06-28-cross-site-page-aggregation-sqlmesh-validation.md  2026-06-28-graded-repo-eval-metric-validation.md  2026-06-28-live-retrieval-repo-path-normalization-validation.md  2026-06-28-live-turbo-search-repo-index-and-eval.md  2026-06-28-local-reranker-repo-and-site-validation.md  2026-06-28-opt-in-page-aggregation-ranking-validation.md  2026-06-28-repo-adaptive-aggregation-validation.md  2026-06-28-repo-eval-autoresearch-docs-validation.md  2026-06-28-repo-eval-autoresearch-review-minor-fixes.md  2026-06-28-repo-file-card-metadata-validation.md  2026-06-28-repo-oversize-metadata-live-eval.md  2026-06-28-repo-oversize-metadata-local-validation.md  2026-06-28-repo-role-diversification-validation.md  2026-06-28-repo-search-eval-autoresearch-final-validation.md  2026-06-28-repo-search-file-ranking-promotion-validation.md  2026-06-28-repo-search-metadata-cross-repo-validation.md  2026-06-28-repo-search-precision-hypothesis-experiments.md  2026-06-28-turbo-search-seed-repo-eval-dataset-validation.md  2026-06-28-website-adaptive-aggregation-review.md  2026-06-28-website-page-aggregation-experiments.md  2026-06-28-website-page-level-ranking-validation.md  2026-06-28-website-page-ranking-default-promotion-validation.md  2026-06-28-website-ranking-evidence-hardening.md  2026-07-02-cli-one-line-plan-progress-validation.md  2026-07-02-repo-routed-profile-portfolio-validation.md  2026-07-02-website-default-cap-increase-validation.md  2026-07-03-website-crawl-strategy-default-validation.md  2026-07-03-website-language-policy-validation.md  2026-07-08-local-markitdown-document-source-ingestion.md  2026-07-08-local-pdf-source-ingestion.md  2026-07-12-approved-apply-progress.md  2026-07-12-approved-apply-throughput-measurement.md  2026-07-13-live-dagster-throughput-benchmark.md  (+88 more)
.10x/knowledge/: buoy-site-planning-workflow.md  repo-search-ranking-defaults.md  turbo-search-site-planning-workflow.md  (+1 more)
autoresearch/: program.md
docs/: catalog.md  generic-site-rag-plan-apply.md  indexing.md  migrating-to-buoy.md  releasing.md  retrieval.md
scripts/: c6_syntax_forecast.py  release_automation.py  release_checks.py  validate_ranking_contract.py
tests/: test_applied_state.py  test_apply_cli.py  test_automatic_routing.py  test_autoresearch.py  test_c6_syntax_forecast.py  test_catalog.py  test_catalog_cli.py  test_catalog_pending.py  test_chunker.py  test_cli.py  test_config.py  test_crawler.py  test_crawler_exact_host.py  test_cutover_isolation.py  test_duckdb_relation.py  test_duckdb_relation_cli.py  test_dynamic_version.py  test_environment_alias_removal.py  test_evals.py  test_experimental_baseline.py  test_github_repo.py  test_multi_namespace_retrieval.py  test_plan_artifacts.py  test_ranking_contract.py  test_release_automation.py  test_remote_catalog.py  test_repo_syntax_chunking.py  test_retriever.py  test_semantic_routing_representative.py  test_treatment_token_budget.py
(+485 files in other folders)
