[project]
name = "turbo-search"
version = "0.1.0"
description = "Website-to-turbopuffer hybrid RAG planning, apply, retrieval, and eval CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "turbo-search maintainers" }]
dependencies = [
    "turbopuffer",
    "sentence-transformers",
    "PyYAML",
    "scrapling[fetchers]>=0.4.9",
    "markdownify>=1.2.0",
    "markitdown[docx,pdf,pptx,xls,xlsx]",
]

[project.scripts]
turbo-search = "turbo_search.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turbo_search"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
