[project]
name = "buoy-search"
version = "0.3.0"
description = "Plan, index, and search public knowledge sources with anchored citations."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Buoy maintainers" }]
keywords = ["hybrid-search", "rag", "retrieval", "turbopuffer", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "turbopuffer",
    "sentence-transformers",
    "PyYAML",
    "scrapling[fetchers]>=0.4.9",
    "markdownify>=1.2.0",
    "markitdown[docx,pdf,pptx,xls,xlsx]",
    "duckdb>=1.5.4",
    "portalocker>=3.2.0",
]

[project.urls]
Repository = "https://github.com/Doctacon/buoy-search"
Issues = "https://github.com/Doctacon/buoy-search/issues"
Changelog = "https://github.com/Doctacon/buoy-search/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Doctacon/buoy-search/tree/main/docs"

[project.scripts]
buoy = "buoy_search.cli:main"
turbo-search = "buoy_search.cli:legacy_main"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buoy_search"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
